Fix card title spacing

--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -2357,11 +2357,11 @@ small {
 }
 .frame__title {
   display: block;
-  margin-bottom: 0.5rem;
   padding-bottom: 1.5rem;
   color: hsl(0deg, 0%, 98%);
 }
 .frame__desc {
+  padding-top: 0.5rem;
   padding-bottom: 1.5rem;
   border-top: 0.125rem dotted hsl(197deg, 6%, 78%);
 }
